{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "8a224206-f9ef-4504-8895-38211bf1e7b7",
            "actions": [
                {
                    "name": "SetDefaultSpeed",
                    "type": "Button",
                    "id": "eb5d05fb-ba27-40c9-adeb-c8e22f9d107d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetFasterSpeed",
                    "type": "Button",
                    "id": "f0d750ea-6041-4935-a684-e6bef81fe2de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetFastestSpeed",
                    "type": "Button",
                    "id": "9d887042-21e8-4f95-80d2-bb8f0ef03058",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseCalendar",
                    "type": "Button",
                    "id": "359ade29-301b-4a7e-9bac-e72f4fb1b9fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3dc44696-3905-4e86-9c63-58916e75b714",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "ca39d8ae-6595-4096-8250-f93dc63a8678",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivateDevTools",
                    "type": "Button",
                    "id": "21be32f5-4499-42d0-85c2-874321076a98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed18a94f-930f-4334-a0bd-d17df6ebb98a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetDefaultSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e93eeac-1917-4fe2-80bb-e8015d1711b6",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetFasterSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfd4704a-03c7-4d22-a208-904a5710b32f",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetFastestSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cadc654a-20be-49e4-b00c-096423aac984",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseCalendar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "a17f6282-e6d2-4e02-8366-4a8d2a991d86",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fe53bb8d-cb2c-4d4b-8d16-f8ca20189035",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c20e1b76-7766-48b6-bc23-2afb8123a50f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a243a4ba-05ef-48f9-9a63-459d80ef73ff",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c960230f-39b1-4e87-aa80-ff176cac05d1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d755ff2c-e486-4593-9970-3adf5a01a110",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "289c0a77-f9d9-4af4-aeb7-7d095d6fc349",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateDevTools",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DevelopmentTools",
            "id": "a5982c84-1f85-4fd2-9062-ee8f016577a8",
            "actions": [
                {
                    "name": "CreateExcellentWork",
                    "type": "Button",
                    "id": "fb2ced1e-e570-4ed8-a8de-9a7304b2bfca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CreateMediocreWork",
                    "type": "Button",
                    "id": "b8c6e212-2c44-4b12-99c1-2955a7723b29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CreateTerribleWork",
                    "type": "Button",
                    "id": "82563e40-c01c-4778-95a2-b5cba37f92f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeactivateDevTools",
                    "type": "Button",
                    "id": "f6357cd6-83f9-486e-a7f9-34414831279f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8bf1e781-dbd8-4ea0-abdf-997e4cdecbb5",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CreateExcellentWork",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "184f3995-10b9-447d-a3b9-41bc134397de",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CreateMediocreWork",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e601c371-2960-4dc1-8e9b-ef4ab5a40b5c",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CreateTerribleWork",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32e12d40-6d0d-4377-8552-ea605c3acd39",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeactivateDevTools",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}